Thank You for Choosing to Learn from in28Minutes

--- a/pom.xml
+++ b/pom.xml
@@ -191,7 +191,7 @@
 					<!--<argLine>${jacoco.itAgentConfig}</argLine> -->
 					<includes>
 						<!--<include>**/*ApplicationTests.java</include> -->
-						<include>**/*IntegrationTestCase.java</include>
+						<include>**/*CucumberIntegrationTestCase.java</include>
 					</includes>
 				</configuration>
 			</plugin>
